tests/valid/pointers/multi_pointer.rs
/*
executionExitCode: 2
*/

main(): i32 {
    a: **i32 = 0;
    return 2;
}
