tests/invalid/arrays/missing_bracket_unsized.rs
/*
compilationExitCode: 2
*/

main(): i32{
    a: [i32;
    return 0;
}